EXTRA_DIST = addressbook.png \
	address.png \
	attach.png \
	book.png \
	category.png \
	clip.png \
	complete.png \
	continue.png \
	deleted.png \
	delete.png \
	draft.png \
	error.png \
	folder-close.png \
	folder-noselect.png \
	folder-open.png \
	folder-search.png \
	forwarded.png \
	group.png \
	hand-signed.png \
	html.png \
	inbox.png \
	insert-file.png \
	interface.png \
	junk.png \
	ldap.png \
	linewrap.png \
	mail-compose.png \
	mail-forward.png \
	mail.png \
	mail-receive-all.png \
	mail-receive.png \
	mail-reply.png \
	mail-reply-to-all.png \
	mail-send.png \
	mail-send-queue.png \
	mail-small.png \
	mark.png \
	new.png \
	notspam.png \
	offline.png \
	online.png \
	outbox.png \
	person.png \
	replied.png \
	spam.png \
	trash.png \
	tray-newmail.png \
	tray-nomail.png \
	unread.png \
	vcard.png
